--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,9 @@
 <h1> HELLO WORLD </h1>
-<ul>
+<ul style="list-style-type:none">
   <% @tasks.each do |task| %>
-    <li><%= link_to task[:title], task_path(task[:id])%></li>
+   <% check = task.completed ? "✅" : "⛔" %>
+     <li><%= check %><%= link_to task[:title], task_path(task[:id])%>
   <% end %>
 </ul>
+
+<%= link_to "Add new task", new_path %>
